--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google" content="notranslate" />
+    <meta name="deployment-domain" content="htpfoom.top" />
     <title>HTP挖矿平台</title>
   </head>
   <body class="dark:bg-gray-900">
